<resources>
    <string name="app_name">ChitChat</string>
    <string name="TODO">TODO</string>
    <string name="hint_1">Enter your email address</string>
    <string name="hint_2">Enter your password</string>
    <string name="hint_3">Confirm your password</string>
    <string name="hint_4">Remember me</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_in_text">Are you not registered? Sign up</string>
    <string name="forget_password_text">Forget your password?</string>
    <string name="resend_verification_email">Want to resend verification email again?</string>
    <string name="sign_up_text">Already registered? Sign in</string>
    <string name="greetings">Hello people...!</string>
    <string name="hint_5">First name</string>
    <string name="hint_6">Last name</string>
    <string name="hint_7">Enter your phone number</string>
    <string name="feedbackTextView">Your feedback is the key to my Improvement.</string>
    <string name="feedbackStartingText">Start typing from here...</string>
    <string name="feedbackButton">Send your Opinion</string>
    <string name="aboutmeTextView">Md. Sabik Alam Rahat\nCSE department, EWU</string>
    <string name="alertTitle">Confirm Exit</string>
    <string name="alertMessege">Are you sure you want to exit Teamwork Notifier?</string>
    <string name="hint_8">Your Name: </string>
    <string name="hint_9">Email: </string>
    <string name="hint_10">Phone Number: </string>
    <string name="hint_11">Token id: </string>
    <string name="reset_password_button">Send Mail</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="send_email">Send Email</string>
    <string name="hint_12">Enter your new email address</string>
    <string name="change_password_text">This is a security sensitive operation for that reason you are signed out. A password reset email will sent to your mail if you fill the email session below and press the button.\n\nWant to sign in again?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="title_1">Sign in Activity</string>
    <string name="title_2">Sign up Activity</string>
    <string name="title_3">Teamwork Notifier</string>
    <string name="title_4">About me</string>
    <string name="title_5">Update Email</string>
    <string name="title_6">Edit Information</string>
    <string name="title_7">Your Feedback</string>
    <string name="title_8">Your Profile</string>
    <string name="title_9">Reset Password</string>-->
    <string name="send_messege_hint">Type a message...</string>
    <string name="search">Search by user\'s email address...</string>
    <string name="last_msg">Hello Everyone!...</string>
    <string name="hint_13">Enter a group name...</string>
    <string name="hint_14">Add group members by email address...</string>
    <string name="hint_15">Cancel</string>
    <string name="hint_16">Create Group</string>
</resources>