<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/resetPasswordActivitySignout_and_SigninTextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/change_password_text"
            android:textAlignment="center"
            android:textColor="#F60334"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/resetPasswordActivityEmailEditTextID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_1"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/resetPasswordActivitySendMailButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#938C9E"
            android:text="@string/reset_password_button"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>