<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditInformationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:id="@+id/editInformationActivityProfilePictureImageViewID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:src="@drawable/add_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="5"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold">

                <EditText
                    android:id="@+id/editInformationActivityFirstNameEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_5"
                    android:inputType="textPersonName"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="5"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold">

                <EditText
                    android:id="@+id/editInformationActivityLastNameEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_6"
                    android:inputType="textPersonName"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textSize="18sp">

            <EditText
                android:id="@+id/editInformationActivityPhoneNumberEditTextID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_7"
                android:inputType="phone"
                android:textAlignment="textStart"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/editInformationActivitySaveChangesButtonID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#938C9E"
            android:text="@string/save_changes_button"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/editInformationActivityProgressBarID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>