<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:weightSum="5"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userShowFragmentLayoutImageViewID"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:civ_border_color="#237070"
            app:civ_border_width="2dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userShowFragmentLayoutShowOnlineID"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:src="#05df29"
            android:visibility="gone"
            app:civ_border_color="#05df29"
            app:civ_border_width="0dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userShowFragmentLayoutShowOfflineID"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:src="#939191"
            android:visibility="gone"
            app:civ_border_color="#939191"
            app:civ_border_width="0dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userShowFragmentLayoutNameTextViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/hint_8"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userShowFragmentLayoutEmailTextViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/hint_9"
                android:textSize="14sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/userShowFragmentLayoutLastMessageTextViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="4dp"
                android:text="@string/last_msg"
                android:textSize="15sp"
                android:maxLines="1"
                android:visibility="gone"
                android:textColor="#237070"/>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userShowFragmentLayoutUnseenMessageID"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:src="#25ACAC"
            android:visibility="gone"
            app:civ_border_color="#25ACAC"
            app:civ_border_width="0dp" />

    </LinearLayout>

</LinearLayout>